Bug 371464 - Can't connect to channel with command line options when Konversation already running
Summary: Can't connect to channel with command line options when Konversation already ...
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-21 21:29 UTC by Linus Kardell
Modified: 2016-10-29 16:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Linus Kardell 2016-10-21 21:29:43 UTC
The command line options for connecting to a channel doesn't work if Konversation is already running. If Konversation was not running it connects to the channel, however if it was already running it just opens the Konversation window without doing anything.

Reproducible: Always

Steps to Reproduce:
1. Start Konversation
2. Try to connect using the commandline switches e.g. "konversation --channel \#channelname --server server-adress --password password --nick nickname"

Actual Results:  
The Konversation window is shown, but nothing else happens

Expected Results:  
Konversation connects to the server and channel.

openSUSE Leap 42.1
Comment 1 Peter Simonsson 2016-10-29 16:47:02 UTC
Git commit 5a4dbac366164db548cc755fa1bedc6c89a44b93 by Peter Simonsson.
Committed on 29/10/2016 at 16:46.
Pushed by psn into branch 'master'.

Fix parsing of command line options when already running

Make sure the command line options get parsed if konversation is already
running and it's started again.

M  +12   -0    src/application.cpp
M  +8    -0    src/application.h
M  +3    -2    src/main.cpp

http://commits.kde.org/konversation/5a4dbac366164db548cc755fa1bedc6c89a44b93