Fix parsing of command line options when already running

Make sure the command line options get parsed if konversation is already
running and it's started again.

BUG: 371464